# oflex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-ubuntu.yml  cmake-windows.yml  cmake.yml  cmake_matrix.yml
doc/: nfa_dfa.docx  readme.txt  编译原理(2)词法-2(NFA、DFA的确定化和化简).ppt
qt_build/oflex/: lexfileparse.cpp  lexfileparse.h  main_qt.cpp  oflex.pro
qt_build/regex_lex/: main_qt.cpp  nfaconvert.cpp  regex_lex.pro
src/: CMakeLists.txt  NFAState.cpp  NFAState.h  ORegexList.cpp  ORegexList.h  ORegexParse.cpp  ORegexParse.h  dot_generator.cpp  dot_generator.h  flex_sample1.cpp  flex_sample1.h  fsa_to_dot.cpp  fsa_to_dot.h  lexfileparse.cpp  lexfileparse.h  main.cpp  mytests.cpp  mytests.h  nfaconvert.cpp  nfaconvert.h  oflexparse.cpp  oflexparse.h  regex_match.cpp  regex_match.h
src/util/: mylog.cpp  num2str.cpp  num2str.h  string_eval.cpp  string_eval.h  trim.cpp
test/: CMakeLists.txt  calc.l  calc.l.inc  quut_com_ansi_c.l.inc  readme.txt  test1.dot  test1.l  test10.l.inc  test11.dot  test11.r  test12.dot  test12.r  test2.dot  test2.l  test2.r  test3.dot  test3.l  test3.r  test4.dot  test4.l  test4.r  test5.dot  test5.r  test6.dot  test6.r  test7.dot  test7.r  test8.r  test9.dot  test9.r
